[project]
name = "langgraph-tutorial"
version = "0.1.0"
description = "A chatbot that routes between emotional and logical responses"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-anthropic>=0.3.12",
    "langgraph>=0.3.34",
    "python-dotenv>=1.1.0",
]

[tool.setuptools]
py-modules = ["main"]
